--- a/notebooks/solutions/3_sklearn_segmentation_filtering.ipynb
+++ b/notebooks/solutions/3_sklearn_segmentation_filtering.ipynb
@@ -796,7 +796,7 @@
     "1. Use the classifier to predict   \n",
     "\n",
     "```python\n",
-    "predictions = classifier.predict(measurements[columns_list])\n",
+    "predictions = classifier.predict(measurements[columns_list].to_numpy())\n",
     "```\n",
     "\n",
     "2. Create a copy of the labels image   \n",
@@ -854,7 +854,7 @@
    ],
    "source": [
     "# your code here\n",
-    "preds = classifier.predict(normalized_measurements[columns_list])\n",
+    "preds = classifier.predict(normalized_measurements[columns_list].to_numpy())\n",
     "\n",
     "filtered_labels = labels.copy()\n",
     "for index, label in enumerate(measurements['label']):\n",
