--- a/notebooks/3_sklearn_segmentation_filtering.ipynb
+++ b/notebooks/3_sklearn_segmentation_filtering.ipynb
@@ -387,7 +387,7 @@
     "1. Use the classifier to predict   \n",
     "\n",
     "```python\n",
-    "predictions = classifier.predict(measurements[columns_list])\n",
+    "predictions = classifier.predict(measurements[columns_list].to_numpy())\n",
     "```\n",
     "\n",
     "2. Create a copy of the labels image   \n",
