--- a/notebooks/1_sklearn_introduction.ipynb
+++ b/notebooks/1_sklearn_introduction.ipynb
@@ -97,8 +97,12 @@
     "\n",
     "Example code:\n",
     "```python\n",
-    "def custom_function(input):\n",
-    "    # your code here\n",
+    "import numpy as np # we need to import numpy as we will be using it\n",
+    "def custom_normalize(input_image):\n",
+    "    input_image = input_image.astype(np.float32)\n",
+    "    input_max = # use np.max(input_image)\n",
+    "    input_min = # use.np.min(input_image)\n",
+    "    output = (input_image - input_min) / (input_max - input_min)\n",
     "    return output\n",
     "```\n",
     "\n",
@@ -174,7 +178,13 @@
     "---\n",
     "\n",
     "We will start by trying to use the [K-Means clustering](https://scikit-learn.org/stable/modules/generated/sklearn.cluster.KMeans.html) algorithm.\n",
-    "For it's class initialization, we need to define the number of clusters we want to use. For binary segmentation, we will use 2 clusters."
+    "For it's class initialization, we need to define the number of clusters we want to use. For binary segmentation, we will use 2 clusters.  \n",
+    "    \n",
+    "a) Import it and initialize it:\n",
+    "```python\n",
+    "from sklearn.cluster import KMeans\n",
+    "model = KMeans(2) # sets number of clusters to 2\n",
+    "```"
    ]
   },
   {
@@ -197,7 +207,10 @@
     "```\n",
     "\n",
     "In this case we can consider the `n_samples` equal to `n_pixels` and `n_features` equal to it's value.  \n",
-    "So it's final shape should correspond to `(n_pixels, 1)`"
+    "So it's final shape should correspond to `(n_pixels, 1)`\n",
+    "\n",
+    "b) reshape the array and store it in a new variable   \n",
+    "c) print the reshaped array shape by printing new_array.shape"
    ]
   },
   {
@@ -216,7 +229,7 @@
     "Exercise:\n",
     "1. train the model using the reshaped image\n",
     "2. predict using the same reshaped image (_Note_: we would typically want to test the quality of the segmentation on data not used for training)\n",
-    "3. reshape the predicted output to the original image shape\n",
+    "3. reshape the predicted output to the original image shape (using `output.reshape(image.shape)`\n",
     "4. display it"
    ]
   },
@@ -240,7 +253,11 @@
     "  \n",
     "We can use matplotlib subplots to display multiple images at once:\n",
     "```python\n",
-    "plt.subplot(n_rows, n_cols, image_index)\n",
+    "\n",
+    "plt.figure(figsize(15, 10)) # sets the overall size for the figure\n",
+    "\n",
+    "plt.subplot(n_rows, n_cols, image_position) # since we have 3 images, let's use 1 row and 3 columns\n",
+    "# image position will start at 1 and increment by 1 at each image\n",
     "plt.title(\"Image Title\")\n",
     "plt.imshow(image, cmap='gray')\n",
     "plt.axis('off') # just to make it look better to remove unnecessery axis which occupy space in the image frame\n",
@@ -345,12 +362,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6.2 Repeat the same task by yourself using a different image (`wt_membrane.tif` or `wt_phase_contrast.tif`)\n",
+    "## 6.2 Repeat the same task by yourself using `../data/images/wt_membrane.tif`\n",
     "\n",
     "- Load the image\n",
     "- Normalize the intensities\n",
+    "- Reshape the image using `.reshape((-1, 1))`\n",
     "- Train a KMeans model with your new image\n",
     "- Predict the segmentation with your new image\n",
+    "- Reshape the predicted output to the original image shape `.reshape(image.shape)\n",
     "- Display the result and evaluate the quality of segmentation using the IoU function\n",
     "\n",
     "Always feel free to ask for help :)"
@@ -448,7 +467,7 @@
     "\n",
     "_Note_: Don't forget that, as before, we need our data to be in shape `(n_samples, n_features)`.\n",
     "\n",
-    "Use the following skeleton for the new custom function:\n",
+    "Use the following skeleton for the new custom function:   \n",
     "\n",
     "```python\n",
     "def generate_feature_stack(image):\n",
@@ -482,7 +501,21 @@
    "source": [
     "Next:\n",
     "1. use the newly defined function to create the feature stack for our normalized image\n",
-    "2. display the features usign the matplotlib `imshow` function. __Note__: We need to reshape the features in order to display them as 2D images."
+    "2. display the features usign the matplotlib `imshow` function. __Note__: We need to reshape the features in order to display them as 2D images.\n",
+    "   \n",
+    "```python\n",
+    "features = generate_feature_stack(image)\n",
+    "\n",
+    "plt.figure(figsize(15, 10))\n",
+    "\n",
+    "plt.subplot(1, 3, 1) # set according to the number of features\n",
+    "plt.title('Feature 1') \n",
+    "plt.imshow(features[0].reshape(image.shape), cmap='gray')\n",
+    "plt.axis('off')\n",
+    "\n",
+    "# do the same for the remaining features\n",
+    "\n",
+    "```"
    ]
   },
   {
@@ -523,7 +556,7 @@
     "\n",
     "We can use numpy index filtering to remove all pixels from the `feature` and `labels` arrays which have not been annotated.\n",
     "\n",
-    "Let's create our own custom function that performs this for both the `feature` stack and `labels`.\n",
+    "Let's create our own custom function that performs this for both the `feature` stack and `labels`.  \n",
     "```python\n",
     "def format_data(feature_stack, annotation):\n",
     "    # start let's use ravel to make annotations a 1D array\n",
@@ -578,6 +611,7 @@
     "Now we use the training data we just prepared to train a new random forest model.\n",
     "\n",
     "Remember that all scikit-learn models have roughly the same API so we do the following:   \n",
+    "   \n",
     "\n",
     "```python\n",
     "from sklearn.model_module import Model\n",
@@ -614,7 +648,7 @@
     "\n",
     "IMPORTANT:\n",
     "- we need to subtract one from the prediction before calling the iou function because the labels start at 1 and our ground truth starts at 0.\n",
-    "This can be achieved by:\n",
+    "This can be achieved by:   \n",
     "```python\n",
     "prediction = classifier.predict(feature_stack.T) - 1\n",
     "```\n",
@@ -724,7 +758,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
