added a few extra instructions

--- a/notebooks/2_sklearn_classification.ipynb
+++ b/notebooks/2_sklearn_classification.ipynb
@@ -48,7 +48,7 @@
     "data = pd.read_csv(\"path/to/data\")\n",
     "```\n",
     "\n",
-    "Let's use it to load the `morphological_measurements.csv` in the data folder of this repository."
+    "Let's use it to load the `../data/morphological_measurements.csv` in the data folder of this repository."
    ]
   },
   {
@@ -130,7 +130,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "plot just the area and perimeter:"
+    "plot just the Area and Perimeter:"
    ]
   },
   {
@@ -171,7 +171,7 @@
     "data.plot.scatter(x=\"feature 1\", y=\"feature 2\")\n",
     "```\n",
     "\n",
-    "try it out with the `area` and `perimeter`"
+    "try it out with the `Area` and `Perimeter`"
    ]
   },
   {
@@ -217,7 +217,19 @@
     "\n",
     "$ x_{norm} = \\frac{x - \\mu}{\\sigma} $\n",
     "\n",
-    "Lets create our own normalization by Z-scores function."
+    "Lets create our own normalization by Z-scores function (also known as Standardization):   \n",
+    "\n",
+    "```python\n",
+    "def normalize_column(data_column):\n",
+    "\n",
+    "    mean = data_column.mean()\n",
+    "\n",
+    "    std = data_column.std()\n",
+    "\n",
+    "    normalized_column = (data_column - mean) / std\n",
+    "\n",
+    "    return normalized_column\n",
+    "```"
    ]
   },
   {
@@ -238,10 +250,10 @@
     "You can copy it with as `data.copy()`.\n",
     "\n",
     "Step-by-step:\n",
-    "1. copy the dataframe\n",
+    "1. copy the dataframe and assign it to a new variable\n",
     "1. create an array with the column names\n",
     "    - _Hint_: is there another way of getting our column names without the last one?\n",
-    "1. iterate over the column names to normalize the data"
+    "1. iterate over the column names using a for loop to normalize the data"
    ]
   },
   {
@@ -455,7 +467,7 @@
     "---\n",
     "\n",
     "We can do this by using the module [`metrics`](https://scikit-learn.org/1.5/api/sklearn.metrics.html) from scikit-learn.\n",
-    "We generate it using `confusion_matrix` and will display it using `ConfusionMatrixDisplay`:\n",
+    "We generate it using `confusion_matrix` and will display it using `ConfusionMatrixDisplay`:   \n",
     "\n",
     "```python\n",
     "from sklearn.metrics import confusion_matrix,ConfusionMatrixDisplay\n",
@@ -485,7 +497,7 @@
     "\n",
     "Let's use the [`precision_score`](https://scikit-learn.org/stable/modules/generated/sklearn.metrics.precision_score.html) function from scikit-learn to calculate the precision of our model.\n",
     "```python\n",
-    "from sklearn.metrics import precision_score\n",
+    "from sklearn.metrics import precision_score   \n",
     "\n",
     "our_score = precision_score(testing_data, prediction_results, average=\"macro\") # average=macro makes it so that we calculate the precision per class and then averages the precision of all labels\n",
     "print(our_score)\n",
@@ -508,7 +520,7 @@
     "## 7. Improving the model\n",
     "The current model is not really great, one common cause of poor performance is class imbalance. This happens when classes are not well represented during training and a classifier will not be able to learn their features accurately. Which may cause them to be mislabeled.\n",
     "\n",
-    "Let's plot the histogram of the classes in `y_train` using [`.hist`](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.hist.html) from matplotlib:\n",
+    "Let's plot the histogram of the classes in `y_train` using [`.hist`](https://matplotlib.org/stable/api/_as_gen/matplotlib.pyplot.hist.html) from matplotlib:   \n",
     "\n",
     "```python\n",
     "from matplotlib import pyplot as plt\n",
@@ -584,6 +596,7 @@
     "We can perform this using the [`model_selection`](https://scikit-learn.org/dev/api/sklearn.model_selection.html) module of scikit-learn.   \n",
     "In there we can find [`ShuffleSplit`](https://scikit-learn.org/dev/modules/generated/sklearn.model_selection.ShuffleSplit.html#sklearn.model_selection.ShuffleSplit) that can create multiple folds of our data.   \n",
     "And we can use the [`cross_val_score`](https://scikit-learn.org/stable/modules/generated/sklearn.model_selection.cross_val_score.html#sklearn.model_selection.cross_val_score) function to evaluate the model on those folds.   \n",
+    "   \n",
     "\n",
     "```python\n",
     "from sklearn.linear_model import LogisticRegression\n",
@@ -613,7 +626,7 @@
     "\n",
     "Use `ShuffleSplit` and `cross_val_score` to see if we can achieve a better accuracy.\n",
     "\n",
-    "Remember that all scikit-learn models have roughly the same API so we do the following:\n",
+    "Remember that all scikit-learn models have roughly the same API so we do the following:   \n",
     "```python\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "classifier = RandomForestClassifier(class_wieight=\"balanced\")\n",
@@ -709,7 +722,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.14"
+   "version": "3.10.15"
   }
  },
  "nbformat": 4,
