--- a/notebooks/1_sklearn_introduction.ipynb
+++ b/notebooks/1_sklearn_introduction.ipynb
@@ -254,7 +254,7 @@
     "We can use matplotlib subplots to display multiple images at once:\n",
     "```python\n",
     "\n",
-    "plt.figure(figsize(15, 10)) # sets the overall size for the figure\n",
+    "plt.figure(figsize=(15, 10)) # sets the overall size for the figure\n",
     "\n",
     "plt.subplot(n_rows, n_cols, image_position) # since we have 3 images, let's use 1 row and 3 columns\n",
     "# image position will start at 1 and increment by 1 at each image\n",
