--- a/notebooks/1_sklearn_introduction.ipynb
+++ b/notebooks/1_sklearn_introduction.ipynb
@@ -506,7 +506,7 @@
     "```python\n",
     "features = generate_feature_stack(image)\n",
     "\n",
-    "plt.figure(figsize(15, 10))\n",
+    "plt.figure(figsize=(15, 10))\n",
     "\n",
     "plt.subplot(1, 3, 1) # set according to the number of features\n",
     "plt.title('Feature 1') \n",
