--- a/notebooks/1_sklearn_introduction.ipynb
+++ b/notebooks/1_sklearn_introduction.ipynb
@@ -668,9 +668,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 13. Let's use napari to create a better annotation image\n",
+    "## 13. (Optional, skip) Let's use napari to create a better annotation image\n",
+    "\n",
+    "<img src=\"https://napari.org/stable/_static/images/draw_component.png\" width=300>\n",
+    "\n",
     "1. On BAND open napari and load the `wt_dna.tif` image there.\n",
-    "2. Create a new label image\n",
+    "2. Create a new label layer\n",
     "3. Use the drawing tool to label background with 1 and cells with 2\n",
     "4. Save the label layer as `wt_labels.tif`\n",
     "5. load the annotations here and repeat the steps from above:\n",
