added warning to not run first cell on BAND

--- a/notebooks/1_sklearn_introduction.ipynb
+++ b/notebooks/1_sklearn_introduction.ipynb
@@ -19,7 +19,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Let's start by installing all required libraries"
+    "## 1. Let's start by installing all required libraries\n",
+    "If running on BAND with the EuBi kernel skip this step, as everything is already preinstalled.   \n",
+    "Otherwise, if you're running on a kernel without the packages installed, remove the # from the next cell and run it."
    ]
   },
   {
@@ -28,7 +30,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install numpy scikit_image scikit_learn matplotlib pandas -q"
+    "# !pip install numpy scikit_image scikit_learn matplotlib pandas -q"
    ]
   },
   {
