--- a/notebooks/3_sklearn_segmentation_filtering.ipynb
+++ b/notebooks/3_sklearn_segmentation_filtering.ipynb
@@ -18,7 +18,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Let's start by installing all required libraries"
+    "## 1. Let's start by installing all required libraries\n",
+    "If running on BAND with the EuBi kernel skip this step, as everything is already preinstalled.   \n",
+    "Otherwise, if you're running on a kernel without the packages installed, remove the # from the next cell and run it."
    ]
   },
   {
@@ -27,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install numpy scipy scikit_image scikit_learn matplotlib pandas -q"
+    "# !pip install numpy scipy scikit_image scikit_learn matplotlib pandas -q"
    ]
   },
   {
