--- a/notebooks/1_sklearn_introduction.ipynb
+++ b/notebooks/1_sklearn_introduction.ipynb
@@ -308,10 +308,10 @@
     "    - We can do this by using the [astype](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.astype.html) method and Python's bool datatype.  \n",
     "\n",
     "2. Then we need to calculate the intersection between the masks. With booleans, this can be achieved by doing a logical `and` operation to check which elements are in both masks:\n",
-    "    - using numpy's [logical_and](https://numpy.org/doc/2.0/reference/generated/numpy.logical_and.html) method\n",
+    "    - using numpy's [np.logical_and](https://numpy.org/doc/2.0/reference/generated/numpy.logical_and.html) method\n",
     "\n",
     "3. Followed by the union, which can be achieved with a logical `or` operation, checking which pixels are in union of both masks:\n",
-    "    - using [logical_or](https://numpy.org/doc/2.0/reference/generated/numpy.logical_or.html) method\n",
+    "    - using [np.logical_or](https://numpy.org/doc/2.0/reference/generated/numpy.logical_or.html) method\n",
     "\n",
     "And finally we can calculate IoU as:\n",
     "```python\n",
