--- a/notebooks/solutions/1_sklearn_introduction.ipynb
+++ b/notebooks/solutions/1_sklearn_introduction.ipynb
@@ -91,7 +91,7 @@
    "source": [
     "# your code here\n",
     "from skimage.io import imread\n",
-    "image = imread(\"../data/images/wt_dna.tif\")\n",
+    "image = imread(\"../../data/images/wt_dna.tif\") # path is different inside the solutions folder\n",
     "\n",
     "from matplotlib import pyplot as plt\n",
     "plt.imshow(image, cmap=\"gray\")"
@@ -123,8 +123,12 @@
     "\n",
     "Example code:\n",
     "```python\n",
-    "def custom_function(input):\n",
-    "    # your code here\n",
+    "import numpy as np # we need to import numpy as we will be using it\n",
+    "def custom_normalize(input_image):\n",
+    "    input_image = input_image.astype(np.float32)\n",
+    "    input_max = # use np.max(input_image)\n",
+    "    input_min = # use.np.min(input_image)\n",
+    "    output = (input_image - input_min) / (input_max - input_min)\n",
     "    return output\n",
     "```\n",
     "\n",
@@ -364,7 +368,7 @@
    ],
    "source": [
     "# your code here\n",
-    "gt_mask = imread(\"../data/images/wt_mask.tif\")\n",
+    "gt_mask = imread(\"../../data/images/wt_mask.tif\") # path is different inside the solutions folder\n",
     "\n",
     "plt.figure(figsize=(15, 5))\n",
     "\n",
@@ -411,10 +415,10 @@
     "    - We can do this by using the [astype](https://numpy.org/doc/stable/reference/generated/numpy.ndarray.astype.html) method and Python's bool datatype.  \n",
     "\n",
     "2. Then we need to calculate the intersection between the masks. With booleans, this can be achieved by doing a logical `and` operation to check which elements are in both masks:\n",
-    "    - using numpy's [logical_and](https://numpy.org/doc/2.0/reference/generated/numpy.logical_and.html) method\n",
+    "    - using numpy's [np.logical_and](https://numpy.org/doc/2.0/reference/generated/numpy.logical_and.html) method\n",
     "\n",
     "3. Followed by the union, which can be achieved with a logical `or` operation, checking which pixels are in union of both masks:\n",
-    "    - using [logical_or](https://numpy.org/doc/2.0/reference/generated/numpy.logical_or.html) method\n",
+    "    - using [np.logical_or](https://numpy.org/doc/2.0/reference/generated/numpy.logical_or.html) method\n",
     "\n",
     "And finally we can calculate IoU as:\n",
     "```python\n",
@@ -548,7 +552,7 @@
    ],
    "source": [
     "# your code here\n",
-    "image = imread(\"../data/images/wt_dna.tif\")\n",
+    "image = imread(\"../../data/images/wt_dna.tif\") # path is different inside the solutions folder\n",
     "normalized_image = normalize_intensities(image)\n",
     "plt.imshow(image, cmap=\"gray\")"
    ]
@@ -1444,7 +1448,7 @@
    ],
    "source": [
     "# your code here\n",
-    "napari_labels = imread(\"../data/images/wt_labels.tif\")\n",
+    "napari_labels = imread(\"../../data/images/wt_labels.tif\") # path is different inside the solutions folder\n",
     "X_train, y_train = format_data(feature_stack, napari_labels)\n",
     "classifier = RandomForestClassifier(random_state=100)\n",
     "classifier.fit(X_train, y_train)\n",
